Jupiter notebook setup for Humor Project

--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -6,6 +6,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm -rf sdk_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://download.pytorch.org/whl/cpu\n",
+      "Requirement already satisfied: torch in /opt/conda/lib/python3.9/site-packages (1.11.0+cpu)\n",
+      "Requirement already satisfied: torchvision in /opt/conda/lib/python3.9/site-packages (0.12.0+cpu)\n",
+      "Requirement already satisfied: torchaudio in /opt/conda/lib/python3.9/site-packages (0.11.0+cpu)\n",
+      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.9/site-packages (from torch) (4.0.1)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (from torchvision) (1.21.5)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /opt/conda/lib/python3.9/site-packages (from torchvision) (8.4.0)\n",
+      "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from torchvision) (2.27.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2.0.10)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (1.26.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2021.10.8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original Dataset only Download one of the data sets\n",
+    "#!if [[ -d final_humor_sdk ]]; then rm -rf final_humor_sdk; fi\n",
+    "#!curl -L -o original_data.zip https://www.dropbox.com/s/izk6khkrdwcncia/ted_humor_sdk_v1.zip\\?dl\\=1\n",
+    "#!unzip original_data.zip\n",
+    "#!rm original_data.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   143    0   143    0     0    467      0 --:--:-- --:--:-- --:--:--   467\n",
+      "100   363  100   363    0     0    429      0 --:--:-- --:--:-- --:--:--     0\n",
+      " 64 17.7G   64 11.3G    0     0  11.6M      0  0:26:05  0:16:45  0:09:20 10.9M:00:15  0:29:48 11.0M0M0  11.5M      0  0:26:11  0:10:30  0:15:41 10.1M:11:04  0:15:04 12.2M 0:26:02  0:12:03  0:13:59 11.5M 0:12:31  0:13:33 11.2M     0  11.6M      0  0:26:04  0:16:21  0:09:43 12.0M^C\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# V2 Raw Videos only Download one of the data sets\n",
+    "!if [[ -d final_humor_sdk ]]; then rm -rf final_humor_sdk; fi\n",
+    "!curl -L -o v2_raw_data.zip https://www.dropbox.com/s/lg7kjx0kul3ansq/urfunny2_videos.zip?dl=1\n",
+    "!unzip v2_raw_data.zip\n",
+    "!rm v2_raw_data.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# V2 Extracted Features only Download one of the data sets\n",
+    "!if [[ -d final_humor_sdk ]]; then rm -rf final_humor_sdk; fi\n",
+    "!curl -L -o https://www.dropbox.com/sh/9h0pcqmqoplx9p2/AAC8yYikSBVYCSFjm3afFHQva?dl=1\n",
+    "!unzip v2_extracted_data.zip\n",
+    "!rm v2_extracted_data.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pickle \n",
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -27,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +143,11 @@
     "    \n",
     "    def __init__(self, id_list,max_context_len=5,max_sen_len=20):\n",
     "        self.id_list = id_list\n",
-    "        openface_file=\"openface_features_sdk.pkl\"\n",
-    "        covarep_file=\"covarep_features_sdk.pkl\"\n",
-    "        language_file=\"language_sdk.pkl\"\n",
-    "        word_embedding_list_file=\"word_embedding_list.pkl\"\n",
-    "        humor_label_file=\"humor_label_sdk.pkl\"\n",
+    "        openface_file=\"sdk_features/openface_features_sdk.pkl\"\n",
+    "        covarep_file=\"sdk_features/covarep_features_sdk.pkl\"\n",
+    "        language_file=\"sdk_features/language_sdk.pkl\"\n",
+    "        word_embedding_list_file=\"sdk_features/word_embedding_list.pkl\"\n",
+    "        humor_label_file=\"sdk_features/humor_label_sdk.pkl\"\n",
     "        \n",
     "        self.word_aligned_openface_sdk=load_pickle(openface_file)\n",
     "        self.word_aligned_covarep_sdk=load_pickle(covarep_file)\n",
@@ -146,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_folds_file=\"data_folds.pkl\"\n",
+    "data_folds_file=\"sdk_features/data_folds.pkl\"\n",
     "data_folds=load_pickle(data_folds_file)\n",
     "train=data_folds['train']\n",
     "dev=data_folds['dev']\n",
@@ -159,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10166"
+       "9588"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,94 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 752])\n",
-      "context shape:  torch.Size([10, 5, 20, 752])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "x_p.shape=batch_size*maximum number of words in sentence * 752\n",
@@ -318,7 +322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,9 +336,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
