Run Notebook With output

--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +19,25 @@
      "output_type": "stream",
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://download.pytorch.org/whl/cpu\n",
-      "Requirement already satisfied: torch in /opt/conda/lib/python3.9/site-packages (1.11.0+cpu)\n",
-      "Requirement already satisfied: torchvision in /opt/conda/lib/python3.9/site-packages (0.12.0+cpu)\n",
-      "Requirement already satisfied: torchaudio in /opt/conda/lib/python3.9/site-packages (0.11.0+cpu)\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.9/site-packages (from torch) (4.0.1)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (from torchvision) (1.21.5)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /opt/conda/lib/python3.9/site-packages (from torchvision) (8.4.0)\n",
+      "Collecting torch\n",
+      "  Downloading https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp39-cp39-linux_x86_64.whl (169.2 MB)\n",
+      "     |████████████████████████████████| 169.2 MB 19 kB/s              \n",
+      "\u001b[?25hCollecting torchvision\n",
+      "  Downloading https://download.pytorch.org/whl/cpu/torchvision-0.12.0%2Bcpu-cp39-cp39-linux_x86_64.whl (14.7 MB)\n",
+      "     |████████████████████████████████| 14.7 MB 43.5 MB/s            \n",
+      "\u001b[?25hCollecting torchaudio\n",
+      "  Downloading https://download.pytorch.org/whl/cpu/torchaudio-0.11.0%2Bcpu-cp39-cp39-linux_x86_64.whl (2.7 MB)\n",
+      "     |████████████████████████████████| 2.7 MB 51.6 MB/s            \n",
+      "\u001b[?25hRequirement already satisfied: typing-extensions in /opt/conda/lib/python3.9/site-packages (from torch) (4.0.1)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from torchvision) (2.27.1)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /opt/conda/lib/python3.9/site-packages (from torchvision) (8.4.0)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.9/site-packages (from torchvision) (1.21.5)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2.0.10)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (1.26.8)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2021.10.8)\n"
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2.0.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->torchvision) (2021.10.8)\n",
+      "Installing collected packages: torch, torchvision, torchaudio\n",
+      "Successfully installed torch-1.11.0+cpu torchaudio-0.11.0+cpu torchvision-0.12.0+cpu\n"
      ]
     }
    ],
@@ -52,22 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   143    0   143    0     0    467      0 --:--:-- --:--:-- --:--:--   467\n",
-      "100   363  100   363    0     0    429      0 --:--:-- --:--:-- --:--:--     0\n",
-      " 64 17.7G   64 11.3G    0     0  11.6M      0  0:26:05  0:16:45  0:09:20 10.9M:00:15  0:29:48 11.0M0M0  11.5M      0  0:26:11  0:10:30  0:15:41 10.1M:11:04  0:15:04 12.2M 0:26:02  0:12:03  0:13:59 11.5M 0:12:31  0:13:33 11.2M     0  11.6M      0  0:26:04  0:16:21  0:09:43 12.0M^C\n",
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# V2 Raw Videos only Download one of the data sets\n",
     "!if [[ -d final_humor_sdk ]]; then rm -rf final_humor_sdk; fi\n",
@@ -91,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +252,7 @@
        "9588"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,9 +286,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_82/2332142093.py:99: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  context_w=np.array(self.language_sdk[hid]['context_embedding_indexes'])\n",
+      "/tmp/ipykernel_82/2332142093.py:100: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  context_of=np.array(self.word_aligned_openface_sdk[hid]['context_features'])\n",
+      "/tmp/ipykernel_82/2332142093.py:101: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  context_cvp=np.array(self.word_aligned_covarep_sdk[hid]['context_features'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.]])\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "x_p.shape=batch_size*maximum number of words in sentence * 752\n",
